@@ -19,6 +19,7 @@ Version 0.6.1
 - fixed a bug with empty arguments in the werkzeug.script system.
 - fixed a bug where log lines will be duplicated if an application uses
   :meth:`logging.basicConfig` (#499)
+- added secure password hashing and checking functions.
 
 Version 0.6
 -----------
